dz-3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-app-service
  namespace: otus-dz-3
  labels:
    app: otus-app
spec:
  selector:
    app: otus-app
  ports:
    - protocol: TCP
      name: http
      port: 8080
      targetPort: 8080
    - protocol: TCP
      name: metrics
      port: 8081
      targetPort: 8081
